# Interface-Matters

./: .gitignore  README.md
gumi/: README.md
gumi/arm/: README.md
gumi/arm/stl/: Link1.stl  Link2.stl  Link3.stl  Link4.stl  Link5.stl  Llink6.stl
gumi/base/: README.md
gumi/base/stl/: BaseBottom.stl  BaseSupport.stl  BaseSupport2.stl  BaseSupportBridge.stl  BaseTop.stl
gumi/gripper/: README.md
gumi/gripper/stl/: GripperBase.stl  GripperTrigger.stl
gumi/h2d2_cover/: README.md
gumi/h2d2_cover/stl/: H2D2CoverBack.stl  H2D2CoverFront.stl  H2D2CoverLatch.stl
gumi/h2d2_support/: README.md
gumi/h2d2_support/stl/: H2D2_Support.stl
gumi_docker/: Dockerfile  Makefile  README.md  requirements.txt
gumi_docker/gumi_ws/src/: .gitignore
gumi_docker/gumi_ws/src/gumi_ros/: CMakeLists.txt  package.xml  setup.py
gumi_docker/gumi_ws/src/gumi_ros/config/: hardware_base.yaml  hardware_egm_.yaml  hardware_egm_fast.yaml  ros_pos_controllers.yaml
gumi_docker/gumi_ws/src/gumi_ros/launch/: gumi_ros.launch  yumi_description.launch  yumi_go_grasp.launch  yumi_go_home.launch  yumi_pos_controller.launch
gumi_docker/gumi_ws/src/gumi_ros/scripts/: base_robot.py  dynamixel_robot.py  gello.py  gumi.py  yumi.py  yumi_go_grasp.py  yumi_go_home.py  yumi_wakeup.py
gumi_docker/gumi_ws/src/yumi_gripper_driver/: CMakeLists.txt  package.xml  setup.py
gumi_docker/gumi_ws/src/yumi_gripper_driver/launch/: robot_interface.launch
gumi_docker/gumi_ws/src/yumi_gripper_driver/scripts/: yumi_gripper_driver.py  yumi_gripper_socket_client.py
