<?xml version="1.0"?>
<package format="2">
    <name>yumi_gripper_driver</name>
    <version>1.0.0</version>
    <description>The yumi_gripper_driver package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag --> 
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="hl18@ic.ac.uk">Haining Luo</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>

</package>